--- a/NLP/IntroToNLPJoshMcGiff.ipynb
+++ b/NLP/IntroToNLPJoshMcGiff.ipynb
@@ -327,7 +327,7 @@
     "\n",
     "# Download the punkt resource\n",
     "nltk.download('punkt')\n",
-    "\n",
+    "nltk.download('stopwords')\n",
     "\n",
     "# Tokenize the text\n",
     "tokens = word_tokenize(combined_reviews)\n",
@@ -847,6 +847,13 @@
     "\n",
     "# Print the list of sexist reviews\n",
     "print(sexistReviews)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Can you figure out how to use other models? **"
    ]
   },
   {
