fixed dependency error

--- a/NLP/IntroToNLPJoshMcGiff.ipynb
+++ b/NLP/IntroToNLPJoshMcGiff.ipynb
@@ -639,6 +639,8 @@
     "\n",
     "# Download the punkt resource\n",
     "nltk.download('punkt')\n",
+    "# need TO ADD THIS!!\n",
+    "nltk.download('stopwords')\n",
     "\n",
     "\n",
     "# Tokenize the text\n",
